--- a/cv.tex
+++ b/cv.tex
@@ -8,7 +8,7 @@
     \setlength{\parskip}{0pt}}%
   {\end{itemize}}
   
-\def\Cplusplus{{\rm C\raise.5ex\hbox{\small ++}}}
+\def\Cplusplus{{\rm C\raise.5ex\hbox{\small ++}}~}
 
 \begin{document}
 \header{Christopher Li}
@@ -25,9 +25,11 @@
     Python
     Ruby
     JavaScript
+    \textsc{html}, \textsc{css}
     {\sc Matlab}
     Verilog
     SQL
+    \LaTeX
   \section{Tools}
     *nix Administration
     Adobe Illustrator
@@ -80,22 +82,24 @@
     \item Increased autonomous running time by up to 80x.
   \end{itemize*}
   }
+
+\workexperience
+  {User Interface Developer}
+  {BountyBuy}
+  {summer 2011}
+  {
+  Responsible for implementation of designs to Haml and Sass, JavaScript interactions, and Ruby on Rails features.
+  \begin{itemize*}
+    \item Refactored unit and integration tests, halving test times.
+  \end{itemize*}
+  }
+
 \workexperience
   {Paid Research}
   {USC iLab}
-  {2011--present}
-  {
-  Granted Provost Fellowship to create a GUI for the Neuromorphic Robotics Toolkit for the USC iLab. Designed and manufactured components for an autonomous land vehicle. Wrote microprocessor software for control.
-  \begin{itemize*}
-    \item Increased running time by adding automatic low-battery shutoff.
-  \end{itemize*}
-  }
-\workexperience
-  {Paid Research}
-  {USC Aerial Robotics}
   {2009--present}
   {
-  Granted Rose Hills Fellowship to write navigation software with ROS in \Cplusplus\ and Python for an autonomous quadrotor helicopter. Responsible for low-level control with an Arduino and serial communication. Electrical Team Lead since Fall 2012.
+  Granted Rose Hills Fellowship to write \Cplusplus and Python software for an autonomous quadrotor helicopter. Wrote microcontroller software to interface with hardware. Created a GUI for the USC iLab's robotics framework, written in Coffeescript. Designed and manufactured components and circuit boards. Electrical Team Lead since fall 2012.
   \begin{itemize*}
     \item Increased organization by leading a migration to git for versioning.
     \item Reduced quadrotor weight by 5\% with a new power distribution board.
