Update spacing, rename file

--- a/chrisli_resume.tex
+++ b/chrisli_resume.tex
@@ -99,7 +99,7 @@
   {USC iLab}
   {2009--present}
   {
-  Granted Rose Hills Fellowship to write \Cplusplus and Python software for an autonomous quadrotor helicopter. Wrote microcontroller software to interface with hardware. Created a GUI for the USC iLab's robotics framework, written in Coffeescript. Designed and manufactured components and circuit boards. Electrical Team Lead since fall 2012.
+  Granted Rose Hills Fellowship to write \Cplusplus and Python software for an autonomous quadrotor helicopter. Wrote microcontroller software to interface with hardware. Created a GUI for the USC iLab's robotics framework, written in Coffeescript. Designed and manufactured components and circuit boards.
   \begin{itemize*}
     \item Increased organization by leading a migration to git for versioning.
     \item Reduced quadrotor weight by 5\% with a new power distribution board.
