Update to projects

--- a/chrisli_resume.tex
+++ b/chrisli_resume.tex
@@ -115,13 +115,13 @@
     {File system for CloudApp, written using FUSE. Successfully funded through Kickstarter.}
   \project
     {Maxel}
-    {A multi-threaded download accelerator written using Cocoa and libcurl.}
+    {A multi-threaded download accelerator written using Cocoa and libcurl. Maxel concurrently downloads a file by opening multiple HTTP connections to different segments in the file.}
   \project
     {Trollicons}
     {Rage icons for the most popular IM clients. A custom rake script makes deployment and generation of packages quick and easy. Over 20,000 downloads.}
   \project
     {SevenServers}
-    {Web-based, social S/FTP client. Written in Ruby on Rails.}
+    {Web-based, social S/FTP client. Users can add sftp servers, add friends, and pool their servers into a single virtual storage space. Written in Ruby on Rails.}
 \end{entrylist}
 
 \nopagebreak
