Updated resume and styles

--- a/chrisli_resume.tex
+++ b/chrisli_resume.tex
@@ -50,17 +50,18 @@
 
 \vspace{-1.0em}
 \begin{entrylist}
-  \project
-    {Courses}
-    {Data Structures\Space Operating Systems\Space User Interface Design\Space Embedded Systems Design Lab}
-  
-  \project{Honors}
+  \project {Courses}
   {
-    USC Presidential Scholarship 2009--present
+  Data Structures\Space Operating Systems\Space User Interface Design\\Embedded Systems
+  }
   
-    Viterbi School of Engineering Dean's List 2009--present
-  
-    W.V.T. Rusch Engineering Honors Program 2009--present
+  \project{Awards}
+  {
+    USC Presidential Scholarship \hfill \textit{2009--present}
+    
+    Viterbi School of Engineering Dean's List \hfill \textit{6 semesters}
+    
+    W.V.T. Rusch Engineering Honors Program \hfill \textit{2009--present}
   }
   
   \project{Societies}
@@ -73,13 +74,29 @@
 \section{Work Experience}
 
 \workexperience
-  {OTA/Antenna Design Intern}
+  {Intern}
   {Apple}
   {summer 2012}
   {
-  Used Python to make a distributed, fault-tolerant framework for automating RF test equipment. Worked with overseas equipment vendor to develop their automation interface. Wrote data visualizer and helped centralize test data.
+  Designed and implemented a distributed, fault-tolerant system for running RF tests.
   \begin{itemize*}
-    \item Increased autonomous running time by up to 80x.
+    \item Increased autonomous running time from minutes to hours, up to 80x.
+    \item Implemented a web interface to control tests remotely, allowing for overnight jobs.
+    \item Created a graphical interface with a data visualizer for antenna engineers.
+  \end{itemize*}
+  }
+
+\workexperience
+  {Paid Researcher}
+  {USC iLab}
+  {2011--present}
+  {
+  Granted Rose Hills Fellowship to work on hardware and software for autonomous vehicles for both the iLab and USC Aerial Robotics.
+  \begin{itemize*}
+    \item Redesigned GUI for the USC iLab's robotics framework, allowing for live collaboration with multiple users over the web.
+    \item Led a migration to git for versioning, increasing organization.
+    \item Implemented serial communication between microcontroller and onboard computer.
+    \item Taught new members electronic design and construction as electrical team lead.
   \end{itemize*}
   }
 
@@ -90,38 +107,23 @@
   {
   Responsible for implementation of designs to Haml and Sass, JavaScript interactions, and Ruby on Rails features.
   \begin{itemize*}
-    \item Refactored unit and integration tests, halving test times.
+    \item Refactored Rails unit and integration tests, halving test times.
+    \item Redesigned user interaction for entering locations to provide visual feedback.
   \end{itemize*}
-  }
-
-\workexperience
-  {Paid Research}
-  {USC iLab}
-  {2009--present}
-  {
-  Granted Rose Hills Fellowship to write \Cplusplus and Python software for an autonomous quadrotor helicopter. Wrote microcontroller software to interface with hardware. Created a GUI for the USC iLab's robotics framework, written in Coffeescript. Designed and manufactured components and circuit boards.
-  \begin{itemize*}
-    \item Increased organization by leading a migration to git for versioning.
-    \item Reduced quadrotor weight by 5\% with a new power distribution board.
-    \item Placed 5th of 13 teams at the AUVSI International Aerial Robotics Competition.
-  \end{itemize*}
-  }
+  }  
 
 \section{Personal Projects}
 
 \begin{entrylist}
   \project
-    {Nimbus}
-    {File system for CloudApp, written using FUSE. Successfully funded through Kickstarter.}
-  \project
     {Maxel}
     {A multi-threaded download accelerator written using Cocoa and libcurl. Maxel concurrently downloads a file by opening multiple HTTP connections to different segments in the file.}
   \project
     {Trollicons}
-    {Rage icons for the most popular IM clients. A custom rake script makes deployment and generation of packages quick and easy. Over 20,000 downloads.}
+    {Rage icons for the most popular IM clients. A Ruby script makes deployment and generation of packages quick and easy. Over 20,000 downloads.}
   \project
     {SevenServers}
-    {Web-based, social S/FTP client. Users can add sftp servers, add friends, and pool their servers into a single virtual storage space. Written in Ruby on Rails.}
+    {Web-based, social SFTP client. Users can add SFTP servers, add friends, and pool their servers into a single virtual storage space.}
 \end{entrylist}
 
 \nopagebreak
